--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^2.0.0-33",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "derby": "^2.0.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "lunr": "^0.7.2",
     "moment": "^2.29.4",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "redis": "^4.6.5",
+    "redis-server": "^1.2.2",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
